# Yolov5-Bytetrack

./: CMakeLists.txt  README.md  build.sh  cmakebuild.sh  opt.json
include/: BYTETracker.h  STrack.h  dataType.h  detector.h  logs.h  util.h
src/: BYTETracker.cpp  STrack.cpp  detector.cpp  logs.cpp  main.cpp  util.cpp
